Limit dt by max_timestep in spread_fire_one_timestep

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -6130,13 +6130,13 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
         if max_spread_rate_y == 0.0:
             dt = max_timestep
         else:
-            dt = max_cells_per_timestep * cell_height / max_spread_rate_y
+            dt = min(max_timestep, max_cells_per_timestep * cell_height / max_spread_rate_y)
     else:
         if max_spread_rate_y == 0.0:
-            dt = max_cells_per_timestep * cell_width / max_spread_rate_x
+            dt = min(max_timestep, max_cells_per_timestep * cell_width / max_spread_rate_x)
         else:
-            dt = max_cells_per_timestep * min(cell_width / max_spread_rate_x,
-                                              cell_height / max_spread_rate_y)
+            dt = min(max_timestep, max_cells_per_timestep * min(cell_width / max_spread_rate_x,
+                                                                cell_height / max_spread_rate_y))
 
     # Update the tracked cell values in phi_star_matrix
     for cell_index in tracked_cells:
