Optimize spread_fire_one_timestep and fix divide-by-zero error for cells with 0 phi_gradient

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -6104,40 +6104,45 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
     fire_behavior_dict = {}
 
     # Make a copy of phi_matrix as phi_star_matrix
+    # TODO: Replace with a dictionary and a smarter lookup function or an array copy in place operation
     phi_star_matrix = np.copy(phi_matrix)
 
     # Compute fire behavior values at time (start_time) and identify the max spread rates in the x and y dimensions
+    t0 = int(start_time // band_duration)
     for cell_index in tracked_cells:
         # Unpack cell_index
         (y, x) = cell_index
 
         # Calculate phi gradient on the horizontal plane
-        phi_gradient_xy    = calc_phi_gradient_approx(phi_matrix, cell_width, cell_height, x, y)
-        phi_magnitude_xy   = vu.vector_magnitude(phi_gradient_xy)
-        phi_magnitude_xy_2 = phi_magnitude_xy ** 2.0
+        phi_gradient_xy  = calc_phi_gradient_approx(phi_matrix, cell_width, cell_height, x, y)
+        phi_magnitude_xy = vu.vector_magnitude(phi_gradient_xy)
 
-        # Calculate the fire behavior normal to the fire front on the slope-tangential plane
-        space_time_coordinate = (int(start_time // band_duration), y, x)
-        fire_behavior         = burn_cell_toward_phi_gradient(space_time_cubes, space_time_coordinate,
-                                                              phi_gradient_xy, use_wind_limit,
-                                                              max_length_to_width_ratio)
+        # Check whether cell has a positive phi magnitude
+        if phi_magnitude_xy == 0.0:
+            # Store fire behavior values for later use
+            fire_behavior_dict[cell_index] = {"dphi_dt": 0.0}
+        else:
+            # Calculate the fire behavior normal to the fire front on the slope-tangential plane
+            fire_behavior = burn_cell_toward_phi_gradient(space_time_cubes, (t0, y, x),
+                                                          phi_gradient_xy, use_wind_limit,
+                                                          max_length_to_width_ratio)
 
-        # Keep a running tally of the max spread rates in the x and y dimensions for unburned cells
-        if phi_matrix[y,x] > 0.0:
-            dphi_dt            = fire_behavior["dphi_dt"]
+            # Keep a running tally of the max horizontal spread rates in the x and y dimensions for unburned cells
             (dphi_dx, dphi_dy) = phi_gradient_xy
-            spread_rate_x      = -dphi_dt * dphi_dx / phi_magnitude_xy_2
-            spread_rate_y      = -dphi_dt * dphi_dy / phi_magnitude_xy_2
-            max_spread_rate_x  = max(max_spread_rate_x, abs(spread_rate_x))
-            max_spread_rate_y  = max(max_spread_rate_y, abs(spread_rate_y))
+            phi_magnitude_xy_2 = phi_magnitude_xy ** 2.0
+            if phi_matrix[y,x] > 0.0:
+                dphi_dt            = fire_behavior["dphi_dt"]
+                spread_rate_x      = -dphi_dt * dphi_dx / phi_magnitude_xy_2
+                spread_rate_y      = -dphi_dt * dphi_dy / phi_magnitude_xy_2
+                max_spread_rate_x  = max(max_spread_rate_x, abs(spread_rate_x))
+                max_spread_rate_y  = max(max_spread_rate_y, abs(spread_rate_y))
 
-        # Integrate the Superbee flux limited phi gradient to make dphi_dt numerically stable
-        if phi_magnitude_xy > 0.0:
-            phi_gradient_xy_limited = calc_phi_gradient(phi_matrix, *phi_gradient_xy, cell_width, cell_height, x, y)
+            # Integrate the Superbee flux limited phi gradient to make dphi_dt numerically stable
+            phi_gradient_xy_limited = calc_phi_gradient(phi_matrix, dphi_dx, dphi_dy, cell_width, cell_height, x, y)
             fire_behavior["dphi_dt"] *= np.dot(phi_gradient_xy, phi_gradient_xy_limited) / phi_magnitude_xy_2
 
-        # Store fire behavior values for later use
-        fire_behavior_dict[cell_index] = fire_behavior
+            # Store fire behavior values for later use
+            fire_behavior_dict[cell_index] = fire_behavior
 
     # Calculate timestep using the CFL condition
     if max_spread_rate_x == 0.0:
@@ -6154,10 +6159,13 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
 
     # Update the tracked cell values in phi_star_matrix
     for cell_index in tracked_cells:
-        (y, x) = cell_index
-        phi_star_matrix[y,x] += fire_behavior_dict[cell_index]["dphi_dt"] * dt
+        (y, x)  = cell_index
+        dphi_dt = fire_behavior_dict[cell_index]["dphi_dt"]
+        if dphi_dt != 0.0:
+            phi_star_matrix[y,x] += dphi_dt * dt
 
     # Compute fire behavior values at time (start_time + dt) and update the output matrices
+    t1 = int((start_time + dt) // band_duration)
     for cell_index in tracked_cells:
         # Unpack cell_index
         (y, x) = cell_index
@@ -6166,14 +6174,16 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
         phi_gradient_xy_star  = calc_phi_gradient_approx(phi_star_matrix, cell_width, cell_height, x, y)
         phi_magnitude_xy_star = vu.vector_magnitude(phi_gradient_xy_star)
 
-        # Calculate the fire behavior normal to the fire front on the slope-tangential plane
-        space_time_coordinate = (int((start_time + dt) // band_duration), y, x)
-        fire_behavior_star    = burn_cell_toward_phi_gradient(space_time_cubes, space_time_coordinate,
-                                                              phi_gradient_xy_star, use_wind_limit,
-                                                              max_length_to_width_ratio)
+        # Check whether cell has a positive phi magnitude
+        if phi_magnitude_xy_star == 0.0:
+            fire_behavior_star = {"dphi_dt": 0.0}
+        else:
+            # Calculate the fire behavior normal to the fire front on the slope-tangential plane
+            fire_behavior_star = burn_cell_toward_phi_gradient(space_time_cubes, (t1, y, x),
+                                                               phi_gradient_xy_star, use_wind_limit,
+                                                               max_length_to_width_ratio)
 
-        # Integrate the Superbee flux limited phi gradient to make dphi_dt numerically stable
-        if phi_magnitude_xy_star > 0.0:
+            # Integrate the Superbee flux limited phi gradient to make dphi_dt numerically stable
             phi_gradient_xy_star_limited = calc_phi_gradient(phi_star_matrix, *phi_gradient_xy_star,
                                                              cell_width, cell_height, x, y)
             fire_behavior_star["dphi_dt"] *= (np.dot(phi_gradient_xy_star, phi_gradient_xy_star_limited) /
@@ -6184,21 +6194,22 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
         dphi_dt_estimate1 = fire_behavior["dphi_dt"]
         dphi_dt_estimate2 = fire_behavior_star["dphi_dt"]
         dphi_dt_average   = (dphi_dt_estimate1 + dphi_dt_estimate2) / 2.0
-        phi               = phi_matrix[y,x]
-        phi_next          = phi + dphi_dt_average * dt
+        if dphi_dt_average != 0.0:
+            phi      = phi_matrix[y,x]
+            phi_next = phi + dphi_dt_average * dt
 
-        # Update the tracked cell values in phi_matrix
-        phi_matrix[y,x] = phi_next
+            # Update the tracked cell values in phi_matrix
+            phi_matrix[y,x] = phi_next
 
-        # Record fire behavior values in their respective output matrices for cells that are burned in this timestep
-        # NOTE: This records the fire behavior values at time (start_time) and not at the time of arrival.
-        if phi > 0.0 and phi_next <= 0.0:
-            fire_type_matrix[y,x]          = fire_type_codes[fire_behavior["fire_type"]]
-            spread_rate_matrix[y,x]        = fire_behavior["spread_rate"]
-            spread_direction_matrix[y,x]   = spread_direction_vector_to_angle(fire_behavior["spread_direction"])
-            fireline_intensity_matrix[y,x] = fire_behavior["fireline_intensity"]
-            flame_length_matrix[y,x]       = fire_behavior["flame_length"]
-            time_of_arrival_matrix[y,x]    = start_time + dt * phi / (phi - phi_next)
+            # Record fire behavior values in the output matrices for cells that are burned in this timestep
+            # NOTE: This records the fire behavior values at time (start_time) and not at the time of arrival.
+            if phi > 0.0 and phi_next <= 0.0:
+                fire_type_matrix[y,x]          = fire_type_codes[fire_behavior["fire_type"]]
+                spread_rate_matrix[y,x]        = fire_behavior["spread_rate"]
+                spread_direction_matrix[y,x]   = spread_direction_vector_to_angle(fire_behavior["spread_direction"])
+                fireline_intensity_matrix[y,x] = fire_behavior["fireline_intensity"]
+                flame_length_matrix[y,x]       = fire_behavior["flame_length"]
+                time_of_arrival_matrix[y,x]    = start_time + dt * phi / (phi - phi_next)
 
     # Update the sets of frontier cells and tracked cells based on the updated phi matrix
     frontier_cells_new = identify_frontier_cells(phi_matrix, tracked_cells)
